--- a/udder/src/components/NavLeft/style.css
+++ b/udder/src/components/NavLeft/style.css
@@ -7,7 +7,6 @@ a:hover {
     font-weight: bold;
     color: white;
     margin: 20px;
-    overflow: hidden;
 }
 
 .navLeftItem:hover {
